# crypto_fall2011

./: .gitignore  CMakeLists.txt  README  README.md  atm.c  bank.c  banking_commands.h  banking_commands.h.in  banking_constants.h.in  crypto_utils.h  db_utils.h  gnome.sh.in  libplouton.pc.in  proxy.c  run_system.sh  run_system.sh.in  socket_utils.h
core/: CMakeLists.txt  audit.c  comm.c  crypto.c  extern.c  keystore.c  libplouton.c  otp.c  pin.c  print.c  shell.c  signals.c  sockets.c  sqlite3.c  symmetric.c  utils.c
libplouton/: CMakeLists.txt  client.h  crypto.h  db.h  keystore.h  libplouton.h.in  relay.h  server.h  shell.h  signals.h  socket.h  sockets.h  types.h
tests/: CMakeLists.txt
ui/: CMakeLists.txt  atm.c  proxy.c
ui/client/: atm.c  balance.c  login.c  logout.c  session.c  transfer.c  withdraw.c
ui/relay/: audit.c  ipv4.c  proxy.c
ui/server/: bank_balance.c  bank_deposit.c  bank_session.c  handle_balance.c  handle_login.c  handle_logout.c  handle_transfer.c  handle_withdraw.c
utilities/: auth.c  comm.c  libplouton.c  sqlite3.c
